--- a/issuance/build.gradle
+++ b/issuance/build.gradle
@@ -39,6 +39,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.netflix.graphql.dgs:graphql-dgs-spring-boot-starter:latest.release'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.temporal:temporal-sdk:1.0.7'
     implementation project(':restaurant-api')
     implementation project(':courier-api')
