--- a/courier/build.gradle
+++ b/courier/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation('org.mock-server:mockserver-netty:5.11.2')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'com.netflix.graphql.dgs:graphql-dgs-spring-boot-starter:latest.release'
     implementation project(':courier-api')
     implementation 'io.temporal:temporal-sdk:1.0.7'
