--- a/courier/build.gradle
+++ b/courier/build.gradle
@@ -9,7 +9,7 @@ sourceCompatibility = '11'
 
 jib {
   from {
-    image = 'gcr.io/distroless/java:11'
+    image = 'openjdk:11-jre-slim'
   }
 
   to {
